feat:  UI components and update documentation structure
-  new copy-button component
- Update meta.json files to reorganize documentation structure
- Add new UI components (label, scroll-area, slider, switch)
- Implement theme switcher and mobile detection hooks
- Improve build-registry script to handle double quotes
- Add LICENSE.md and update README.md
- Update package.json with new dependencies
- Add new documentation pages (introduction, CLI, button)
- Implement new layout configuration and footer

--- a/components.json
+++ b/components.json
@@ -11,9 +11,9 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "@/components/ui",
+    "components": "@/components/soldevkit-ui",
     "utils": "@/lib/utils",
-    "ui": "@/components/ui",
+    "ui": "@/components/soldevkit-ui",
     "lib": "@/lib",
     "hooks": "@/hooks"
   },
