--- a/package.json
+++ b/package.json
@@ -26,14 +26,22 @@
     ]
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "@once-ui-system/core": "^1.4.18",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@solana/wallet-adapter-react": "^0.15.39",
+    "@solana/wallet-adapter-react-ui": "^0.9.39",
+    "@solana/wallet-adapter-wallets": "^0.19.37",
+    "@solana/web3.js": "^1.98.4",
     "class-variance-authority": "^0.7.1",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "fumadocs-core": "^15.3.4",
     "fumadocs-docgen": "^2.1.0",
     "fumadocs-mdx": "^11.6.5",
     "fumadocs-ui": "^15.3.4",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.510.0",
     "motion": "^12.23.12",
     "next": "15.3.2",
@@ -41,8 +49,12 @@
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-responsive": "^10.0.1",
+    "react-use-measure": "^2.1.7",
+    "sharp": "^0.33.4",
     "shiki": "^3.9.2",
     "tailwind-merge": "^3.3.0",
+    "three": "^0.179.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
