feat(wallet): add Solana wallet provider and update documentation
Add new Solana wallet provider components and update CLI documentation to include wallet provider installation instructions. Also includes various code style improvements and dependency updates.

- Add wallet provider components for Solana integration
- Update CLI documentation with wallet provider installation examples
- Improve code style consistency with quote replacements
- Update dependencies in pnpm-lock.yaml

--- a/.soldevkitrc.json
+++ b/.soldevkitrc.json
@@ -1,5 +1,7 @@
 {
-  "providers": ["solana-wallet"],
+  "providers": [
+    "solana-wallet"
+  ],
   "components": [
     "token-selector",
     "wallet-connect-button",
