--- a/.soldevkitrc.json
+++ b/.soldevkitrc.json
@@ -1,11 +1,11 @@
 {
-  "providers": [
-    "solana-wallet"
-  ],
+  "providers": ["solana-wallet"],
   "components": [
     "token-selector",
     "wallet-connect-button",
     "wallet-connect-button-demo",
-    "copy-button"
+    "copy-button",
+    "swap",
+    "swap-demo"
   ]
 }
